universal hook wip

--- a/ImGTA/ImGTA.vcxproj
+++ b/ImGTA/ImGTA.vcxproj
@@ -39,6 +39,17 @@
     <ClCompile Include="scripts_mod.cpp" />
     <ClCompile Include="strangers_and_freaks_names.cpp" />
     <ClCompile Include="test_mod.cpp" />
+    <ClCompile Include="UniversalHookX\console\console.cpp" />
+    <ClCompile Include="UniversalHookX\dllmain.cpp" />
+    <ClCompile Include="UniversalHookX\hooks\backend\dx10\hook_directx10.cpp" />
+    <ClCompile Include="UniversalHookX\hooks\backend\dx11\hook_directx11.cpp" />
+    <ClCompile Include="UniversalHookX\hooks\backend\dx12\hook_directx12.cpp" />
+    <ClCompile Include="UniversalHookX\hooks\backend\dx9\hook_directx9.cpp" />
+    <ClCompile Include="UniversalHookX\hooks\backend\opengl\hook_opengl.cpp" />
+    <ClCompile Include="UniversalHookX\hooks\backend\vulkan\hook_vulkan.cpp" />
+    <ClCompile Include="UniversalHookX\hooks\hooks.cpp" />
+    <ClCompile Include="UniversalHookX\menu\menu.cpp" />
+    <ClCompile Include="UniversalHookX\utils\utils.cpp" />
     <ClCompile Include="user_settings.cpp" />
     <ClCompile Include="utils.cpp" />
     <ClCompile Include="watch_entry.cpp" />
@@ -78,6 +89,17 @@
     <ClInclude Include="strangers_and_freaks_names.h" />
     <ClInclude Include="switch_anim_dict_names.h" />
     <ClInclude Include="test_mod.h" />
+    <ClInclude Include="UniversalHookX\backend.hpp" />
+    <ClInclude Include="UniversalHookX\console\console.hpp" />
+    <ClInclude Include="UniversalHookX\hooks\backend\dx10\hook_directx10.hpp" />
+    <ClInclude Include="UniversalHookX\hooks\backend\dx11\hook_directx11.hpp" />
+    <ClInclude Include="UniversalHookX\hooks\backend\dx12\hook_directx12.hpp" />
+    <ClInclude Include="UniversalHookX\hooks\backend\dx9\hook_directx9.hpp" />
+    <ClInclude Include="UniversalHookX\hooks\backend\opengl\hook_opengl.hpp" />
+    <ClInclude Include="UniversalHookX\hooks\backend\vulkan\hook_vulkan.hpp" />
+    <ClInclude Include="UniversalHookX\hooks\hooks.hpp" />
+    <ClInclude Include="UniversalHookX\menu\menu.hpp" />
+    <ClInclude Include="UniversalHookX\utils\utils.hpp" />
     <ClInclude Include="user_settings.h" />
     <ClInclude Include="utils.h" />
     <ClInclude Include="vectors.h" />
