--- a/ImGTA/ImGTA.vcxproj
+++ b/ImGTA/ImGTA.vcxproj
@@ -47,8 +47,7 @@
     <ClCompile Include="UniversalHookX\hooks\backend\opengl\hook_opengl.cpp" />
     <ClCompile Include="UniversalHookX\hooks\backend\vulkan\hook_vulkan.cpp" />
     <ClCompile Include="UniversalHookX\hooks\hooks.cpp" />
-    <ClCompile Include="UniversalHookX\menu\menu.cpp" />
-    <ClCompile Include="UniversalHookX\utils\utils.cpp" />
+    <ClCompile Include="UniversalHookX\utils\utils_hook.cpp" />
     <ClCompile Include="user_settings.cpp" />
     <ClCompile Include="utils.cpp" />
     <ClCompile Include="watch_entry.cpp" />
@@ -97,7 +96,6 @@
     <ClInclude Include="UniversalHookX\hooks\backend\opengl\hook_opengl.hpp" />
     <ClInclude Include="UniversalHookX\hooks\backend\vulkan\hook_vulkan.hpp" />
     <ClInclude Include="UniversalHookX\hooks\hooks.hpp" />
-    <ClInclude Include="UniversalHookX\menu\menu.hpp" />
     <ClInclude Include="UniversalHookX\utils\utils.hpp" />
     <ClInclude Include="user_settings.h" />
     <ClInclude Include="utils.h" />
@@ -149,6 +147,7 @@
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <AdditionalIncludeDirectories>$(SolutionDir)Libraries\ScriptHookRDR2_SDK\inc\;$(SolutionDir)Libraries\imgui;$(SolutionDir)Libraries\imgui\backends\;$(SolutionDir)Libraries\lua\include\;$(SolutionDir)Libraries\minhook;$(SolutionDir)Libraries\VulkanSDK\1.3.236.0\Include\vulkan;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <FloatingPointModel>Fast</FloatingPointModel>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
