local watcher wip

--- a/ImGTA/ImGTA.vcxproj
+++ b/ImGTA/ImGTA.vcxproj
@@ -17,6 +17,7 @@
     <ClCompile Include="..\Libraries\minhook\trampoline.c" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="menu.cpp" />
+    <ClCompile Include="scanner.cpp" />
     <ClCompile Include="script.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -70,7 +71,10 @@
     <ClCompile Include="utils.cpp" />
     <ClCompile Include="watch_entry.cpp" />
     <ClCompile Include="widgets.cpp" />
+    <ClInclude Include="atArray.h" />
     <ClInclude Include="menu.hpp" />
+    <ClInclude Include="rage.h" />
+    <ClInclude Include="scanner.h" />
     <ClInclude Include="script.h" />
   </ItemGroup>
   <ItemGroup>
