--- a/ImGTA/ImGTA.vcxproj.filters
+++ b/ImGTA/ImGTA.vcxproj.filters
@@ -200,6 +200,9 @@
     <ClCompile Include="menu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="scanner.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="script.h">
@@ -389,6 +392,15 @@
       <Filter>MinHook\hde</Filter>
     </ClInclude>
     <ClInclude Include="menu.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="scanner.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="atArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
